.opsera-voting01/k8s/overlays/staging/result-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-preview
  labels:
    app: result
    role: preview
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: result
