.opsera-voting01/k8s/overlays/staging/vote-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote-preview
  labels:
    app: vote
    role: preview
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: vote
